Make some corrections
