# go_webserver/internal/app/server/router/router.go
@@ -14,7 +14,7 @@ func CreateRouter(
 	ctx context.Context,
 ) http.Handler {
 	r := mux.NewRouter()
-	r.HandleFunc("/accounts/{accountId}", handlers.AccountDetailsHandler(accountService, ctx)).Methods("GET")
+	r.HandleFunc("/accounts/details/{accountId}", handlers.AccountDetailsHandler(accountService, ctx)).Methods("GET")
 	r.Handle("/transactions", handlers.TransactionInsertHandler(transactionService, ctx)).Methods("POST")
 	r.Handle("/accounts/transactions", handlers.AccountTransactionsHandler(accountService, ctx)).Methods("GET")
 	r.Handle("/accounts/login", handlers.AccountLoginHandler(accountService, ctx)).Methods("POST")
